<?xml version="1.0"?>
<package format="2">
  <name>cut_mission</name>
  <version>0.0.0</version>
  <description>A package for the spring 2019 dirt machining project</description>
  <maintainer email="olingravl@gmail.com">cnovak</maintainer>
  <license>MIT</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/cut_planner</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>laser_geometry</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>image_view</exec_depend>

</package>
